# sandbox

./: .dockerignore  .gitignore  Dockerfile  airflow_settings.yaml  docker-compose.override.yml  requirements.txt
.astro/: dag_integrity_exceptions.txt  test_dag_integrity_default.py
.dev/: docker-compose.override.yml
.dev/astro-infra/: .env.example
.dev/astro-infra/deployments/: data.tf  github.tf  main.tf  providers.tf  ssm.tf
.dev/aws-infra/: .env.example  README.md  base.tf
.dev/aws-infra/bastion-host/: .gitignore  instance.tf  key_pair.tf  providers.tf  sg.tf  ssm.tf
.dev/aws-infra/data/: access.tf  astro.tf  eks.tf  project.tf  s3.tf  vpc.tf
.dev/aws-infra/dns/: main.tf  providers.tf  ssm.tf
.dev/k8s/: README.md  namespace.tf  providers.tf
.github/workflows/: deploy.yml
astro/: requirements.txt
dags/: .airflowignore  lint_config.sample.yaml  lint_dags.py  test_operator_config.yaml
dags/automated_workflows/: generator.py  manager.py
dags/examples/: api.py  basic.py  cleanup.py  custom.py  dataset_triggered.py  kpo.py  local_test_dag.py  memory.py  multicron.py  s3.py  test_environment_manager.py  test_memory_dag.py  test_operator_validation.py  test_s3_dag.py  transfer.py
dags/operators/: kpo_sensor.py  random.py
dags/traffic-stuff/: extraction.py  transformation.py
dags/utils/: database.py  metadata.py
database/: run.sh
dbt/: requirements.txt
include/: lint_report.json
include/multi_file/: generator.py  template.py
plugins/multicron/: __init__.py  cron_operations.py  multicron_timetable.py  pyproject.toml
(+109 files in other folders)
